--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Парапсихологя - Феномен Психических Явлений в Физическом Мире</h1>
+    <h1>Парапсихология - Феномен Психических Явлений в Физическом Мире</h1>
     <p>Исследую разум, энергию и скрытые силы подсознания</p>
     <nav>
       <a href="index.html">Главная</a>
