--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
   </footer>
+  <footer>
+  <div class="moon-container">
+    <div id="moon-img" class="moon"></div>
+  </div>
+  <div class="moon-info">
+    <strong>Фаза Луны сегодня:</strong> <span id="phase-name"></span><br>
+    <em id="phase-date"></em>
+  </div>
+</footer>
 
   <script src="js/script.js"></script>
 </body>
