--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
   </footer>
-  <footer>
+<footer>
   <div class="moon-container">
     <div id="moon-img" class="moon"></div>
   </div>
   <div class="moon-info">
-    <strong>Фаза Луны сегодня:</strong> <span id="phase-name"></span><br>
+    <strong></strong> <span id="phase-name"></span>
+    <div id="moon-description" class="moon-desc"></div>
+    <div id="moon-sign" class="moon-sign"></div>
     <em id="phase-date"></em>
   </div>
 </footer>
+
 
   <script src="script.js"></script>
 </body>
