--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
   </footer>
 <footer>
   <div class="moon-container">
-    <div id="moon-img" class="moon"></div>
+    <div id="moon" class="moon"></div>
   </div>
   <div class="moon-info">
-    <strong></strong> <span id="phase-name"></span>
-    <div id="moon-description" class="moon-desc"></div>
+    <span id="phase-name"></span>
     <div id="moon-sign" class="moon-sign"></div>
     <em id="phase-date"></em>
   </div>
 </footer>
+
 
 
   <script src="script.js"></script>
