--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Парапсихология </title>
+  <title>Парапсихология</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,11 +25,16 @@
       <p>Откройте связь между сознанием, энергией и невидимыми силами подсознания.</p>
     </section>
 
-  
     <section class="blog-preview">
       <h2>Последние статьи</h2>
-      <div id="blog-list">
-        <!-- Сюда автоматически подгрузятся статьи из data.json -->
+      <div id="blog-list"></div>
+    </section>
+
+    <section class="moon-container">
+      <div id="moon" class="moon"></div>
+      <div class="moon-info">
+        <span id="phase-name"></span>
+        <em id="phase-date"></em>
       </div>
     </section>
   </main>
@@ -37,18 +42,6 @@
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
   </footer>
-<footer>
-  <div class="moon-container">
-    <div id="moon" class="moon"></div>
-  </div>
-  <div class="moon-info">
-    <span id="phase-name"></span>
-    <div id="moon-sign" class="moon-sign"></div>
-    <em id="phase-date"></em>
-  </div>
-</footer>
-
-
 
   <script src="script.js"></script>
 </body>
