--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
     <section class="blog-preview">
       <h2>Последние статьи</h2>
-      <div id="blog-list"></div>
+      <div id="blog-list">
+        <!-- Сюда автоматически подгрузятся статьи из data.json -->
+      </div>
     </section>
 
     <section class="moon-container">
-      <div id="moon" class="moon"></div>
       <div class="moon-info">
         <span id="phase-name"></span>
         <em id="phase-date"></em>
