--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
       </div>
     </section>
 
-    <section class="moon-container">
-      <div class="moon-info">
-        <span id="phase-name"></span>
-        <em id="phase-date"></em>
-      </div>
-    </section>
-  </main>
+   <section class="moon-container">
+  <div class="moon-info">
+    <strong>Фаза Луны:</strong> <span id="phase-name"></span>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
