--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </div>
     </section>
 
-   <section class="moon-container">
+<section class="moon-container">
   <div class="moon-info">
-    <strong>Фаза Луны:</strong> <span id="phase-name"></span>
+    Фаза Луны: <span id="phase-name"></span>
   </div>
 </section>
 
