--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section class="moon-container">
   <div class="moon-info">
-    Фаза Луны: <span id="phase-name"></span>
+     <span id="phase-name"></span>
   </div>
 </section>
 
