--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
 <section class="moon-container">
-  <div class="moon-info">
+  <div class="moon-info"> Фаза Луны:
      <span id="phase-name"></span>
   </div>
 </section>
