--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     </section>
 
 <section class="moon-container">
-  <div class="moon-info"> Фаза Луны:
-     <span id="phase-name"></span>
+  <div class="moon-info">
+    Фаза Луны: <span id="phase-name"></span>
   </div>
 </section>
+
 
 
   <footer>
