--- a/index.html
+++ b/index.html
@@ -25,22 +25,14 @@
       <p>Откройте связь между сознанием, энергией и невидимыми силами подсознания.</p>
     </section>
 
-    <section class="blog-preview">
-      <h2>Последние статьи</h2>
-      <div id="blog-list">
-        <!-- Сюда автоматически подгрузятся статьи из data.json -->
-      </div>
-    </section>
-
-<section class="moon-container">
-  <div class="moon-info">
-    Фаза Луны: <span id="phase-name"></span>
-  </div>
-</section>
-
-
+   
+  </main>
 
   <footer>
+    <hr> <!-- линия, чтобы отделить футер -->
+    <div class="moon-info">
+      <span id="phase-name"></span>
+    </div>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
   </footer>
 
