--- a/blog.html
+++ b/blog.html
@@ -3,23 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Блог</title>
+  <title>Блог - Парапсихология</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+    <h1>Парапсихология - Блог</h1>
     <nav>
       <a href="index.html">Главная</a>
-     
+      <a href="about.html">Обо мне</a>
+      <a href="services.html">Услуги</a>
+      
+      <a href="contact.html">Контакты</a>
     </nav>
   </header>
 
   <main>
-    <h1>Блог</h1>
-    <div id="blog-list">
-      <!-- Статьи подгрузятся через fetch -->
-    </div>
+    <section class="blog-preview">
+      <h2>Последние статьи</h2>
+      <div id="blog-list"></div>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Parapsycholog. All rights reserved.</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
