--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Парапсихология - Феномен Психических Явлений в Физическом Мире</h1>
-    <p>Исследую разум, энергию и скрытые силы подсознания</p>
+    <p>сайт в разработке</p>
     <nav>
       <a href="index.html">Главная</a>
       <a href="about.html">Обо мне</a>
