--- a/about.html
+++ b/about.html
@@ -122,20 +122,20 @@
   <div class="gallery">
     <!-- Фото -->
     <div class="gallery-item">
-      <img src="images/photo1.jpg" alt="Моё фото" />
+      <img src="photo1.jpg" alt="Моё фото" />
       <p>Сертификат Гида</p>
     </div>
     <div class="gallery-item">
-      <img src="images/photo2.jpg" alt="Моё фото" />
+      <img src="photo2.jpg" alt="Моё фото" />
       <p>Диплом по Формуле Души</p>
     </div>
     <!-- Дипломы -->
     <div class="gallery-item">
-      <img src="images/diploma1.jpg" alt="Диплом" />
+      <img src="diploma1.jpg" alt="Диплом" />
       <p>Диплом по Парапсихологии</p>
     </div>
     <div class="gallery-item">
-      <img src="images/diploma2.jpg" alt="Диплом" />
+      <img src="diploma2.jpg" alt="Диплом" />
       <p>Диплом по Хирологии</p>
     </div>
   </div>
@@ -148,3 +148,4 @@
   </footer>
 </body>
 </html>
+
