--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Парапсихология - Феномен Психических Явлений в Физическом Мире</h1>
-    <p>сайт в разработке</p>
+    <p></p>
     <nav>
       <a href="index.html">Главная</a>
       <a href="about.html">Обо мне</a>
@@ -21,9 +21,30 @@
 
   <main>
     <section class="intro">
-      <h2>Добро пожаловать</h2>
-      <p>Откройте связь между сознанием, энергией и невидимыми силами подсознания.</p>
+      <h2>Добро пожаловать!</h2>
+      <p>Психическая активность — это не просто результат биохимических процессов, но сложная сеть энергии и вибраций, взаимодействующая с тонкими слоями реальности.</p>
     </section>
+<section id="parapsychology-history" style="background-color: #111; color: #f5f5f5; padding: 50px 20px; line-height: 1.7; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-radius: 10px; max-width: 900px; margin: 50px auto;">
+  <h2 style="color: #aa9102; font-size: 2em; margin-bottom: 20px; text-align: center;">История парапсихологии и области исследований</h2>
+  <p>
+    Парапсихология — это междисциплинарная область исследований, изучающая феномены, выходящие за рамки традиционной психологии и физики, включая телепатию, ясновидение, психокинез и опыт взаимодействия с энергетическими полями. Научные попытки изучения подобных явлений начали активно развиваться в конце XIX — начале XX века.
+  </p>
+  <p>
+    Одним из первых известных институтов, специализировавшихся на парапсихологических исследованиях, стал <em>Society for Psychical Research</em>, основанный в Лондоне в 1882 году. Его участники занимались систематическим сбором и анализом свидетельств о необычных психологических и экстрасенсорных явлениях. Позднее, в XX веке, парапсихология получила развитие в академических и научных центрах США и Европы, включая лаборатории по изучению психокинеза, телепатии и астрального опыта.
+  </p>
+  <p>
+    Основные направления исследований включают:
+  </p>
+  <ul style="margin-left: 20px; list-style-type: disc; color: #f5f5f5;">
+    <li><strong>Экстрасенсорное восприятие (ESP)</strong> — исследование способности человека получать информацию без использования обычных органов чувств.</li>
+    <li><strong>Психокинез (PK)</strong> — изучение воздействия сознания на физические объекты или процессы.</li>
+    <li><strong>Исследование астральных и энергетических полей</strong> — наблюдение и систематизация субъективного опыта взаимодействия с тонкими уровнями сознания и энергетическими структурами.</li>
+    <li><strong>Хиромантия, Таро и Биоэнергетика</strong> — практики, изучающие корреляцию символических и энергетических структур с личностью и судьбой человека.</li>
+  </ul>
+  <p>
+    Современная парапсихология использует сочетание эмпирических методов, лабораторных экспериментов и наблюдательных практик. Целью является выявление закономерностей, проверка гипотез и интеграция полученных знаний с психологией, нейронаукой и философией сознания. Несмотря на критику и споры о научной строгости, парапсихология остаётся уникальной областью исследования сознания и человеческих возможностей.
+  </p>
+</section>
 
    
   </main>
