--- a/services.html
+++ b/services.html
@@ -96,7 +96,28 @@
     <li><strong>Список вопросов</strong> — 4–5 самых важных личных вопросов, на которые вы хотите получить ответ (приоритетные темы).</li>
     <li><strong>Краткая история по теме</strong> — 2–3 предложения для контекста (опционально).</li>
   </ul>
+<section class="services-intro">
+  <h2>Реквизиты для оплаты</h2>
+  <p>Вы можете оплатить услуги следующими способами:</p>
+  <ul>
+    <li>
+      <strong>Английский номер счета (GBP):</strong>
+      <em>Получатель: MR J Timoscenko | Sort Code: 40-10-00 | Acc: 22661136</em>
+    </li>
+    <li>
+      <strong>Латвийский номер счета (EUR):</strong>
+      <em>SEB Bank | Получатель: Jevgenijs Timoscenko | IBAN: LV57UNLA0055005520022</em>
+    </li>
+    <li>
+      <strong>WISE (EUR):</strong>
+      <em>Получатель: Jevgenijs Timoscenko | IBAN: BE18 9670 9148 0965</em>
+    </li>
+  </ul>
+  <p>
+    Цель оплаты — благодарность. После оплаты, пожалуйста, пришлите подтверждение вместе с подготовленными реквизитами для консультации.
+  </p>
 </section>
+
 
   </main>
 
@@ -105,3 +126,4 @@
   </footer>
 </body>
 </html>
+
