--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
    
   </main>
 
-  <footer>
-    <hr> <!-- линия, чтобы отделить футер -->
-    <div class="moon-info">
-      <span id="phase-name"></span>
-    </div>
-    <p>© 2025 Parapsycholog. All rights reserved.</p>
-  </footer>
+<footer>
+  <hr>
+  <div class="moon-info">
+    <span id="phase-name"></span>
+  </div>
+  <p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
+</footer>
+  
 
   <script src="script.js"></script>
 </body>
