--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="canonical" href="https://parapsycholog.uk/about" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Обо мне - Парапсихология</title>
@@ -148,6 +149,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
