--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="canonical" href="https://parapsycholog.uk/blog" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Блог - Парапсихология</title>
