--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="canonical" href="https://parapsycholog.uk/contact" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Контакты | Парапсихология</title>
@@ -52,3 +54,4 @@
   </footer>
 </body>
 </html>
+
