--- a/services.html
+++ b/services.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="canonical" href="https://parapsycholog.uk/services" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Услуги | Парапсихология</title>
@@ -126,4 +128,5 @@
   </footer>
 </body>
 </html>
+
 
