--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Парапсихолог, таролог и эзотерик в Великобритании | Jevgenij Timoscenko</title>
 <meta name="description" content="Консультации по Таро, Хирологии и Парапсихологии. Помогаю разобраться в жизненных ситуациях, раскрыть потенциал и найти ответы. Онлайн и очно в Великобритании.">
-<meta name="keywords" content="парапсихолог, таролог, эзотерик, Таро онлайн, хиромантия, парапсихология UK, эзотерическая помощь">
+<meta name="keywords" content="парапсихолог, таролог, эзотерик, таро онлайн, хиромантия, парапсихология UK, эзотерическая помощь">
 
   <link rel="canonical" href="https://parapsycholog.uk/" />
   <meta charset="UTF-8">
