--- a/services.html
+++ b/services.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <title>Услуги | Консультации по Таро, хирологии и парапсихологии</title>
+<meta name="description" content="Консультации по Таро, Хирологии, Регрессиям, чистки и диагностике. Индивидуальные приёмы и обучение парапсихологии и эзотерке.">
+<meta name="keywords" content="услуги парапсихолога, консультации Таро, хирология, регрессия, энергетическая диагностика, обучение эзотерике">
+
   <link rel="canonical" href="https://parapsycholog.uk/services" />
 
   <meta charset="UTF-8">
@@ -128,5 +132,6 @@
   </footer>
 </body>
 </html>
+
 
 
