--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Парапсихолог, таролог и эзотерик в Великобритании | Jevgenij Timoscenko</title>
+  <title>Парапсихолог, таролог и эзотерик в Великобритании</title>
 <meta name="description" content="Консультации по Таро, Хирологии и Парапсихологии. Помогаю разобраться в жизненных ситуациях, раскрыть потенциал и найти ответы. Онлайн и очно в Великобритании.">
 <meta name="keywords" content="парапсихолог, таролог, эзотерик, таро онлайн, хиромантия, парапсихология UK, эзотерическая помощь">
 
   <link rel="canonical" href="https://parapsycholog.uk/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Парапсихология</title>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
