--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Услуги | Консультации по Таро, хирологии и парапсихологии</title>
+  <title>Услуги | Консультации по таро, хирологии и парапсихологии</title>
 <meta name="description" content="Консультации по Таро, Хирологии, Регрессиям, чистки и диагностике. Индивидуальные приёмы и обучение парапсихологии и эзотерке.">
 <meta name="keywords" content="услуги парапсихолога, консультации Таро, хирология, регрессия, энергетическая диагностика, обучение эзотерике">
 
@@ -9,7 +9,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Услуги | Парапсихология</title>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -132,6 +132,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
