--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="canonical" href="https://parapsycholog.uk/blog" />
+  <link rel="canonical" href="https://parapsycholog.uk/blog.html" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
