--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Консультации по Таро, Хирологии, Регрессиям, чистки и диагностике. Индивидуальные приёмы и обучение парапсихологии и эзотерке.">
 <meta name="keywords" content="услуги парапсихолога, консультации Таро, хирология, регрессия, энергетическая диагностика, обучение эзотерике">
 
-  <link rel="canonical" href="https://parapsycholog.uk/services" />
+  <link rel="canonical" href="https://parapsycholog.uk/services.html" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
