--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h2>Добро пожаловать!</h2>
       <p>Психическая активность — это не просто результат биохимических процессов, но сложная сеть энергии и вибраций, взаимодействующая с тонкими слоями реальности.</p>
     </section>
-<section id="parapsychology-history" style="background-color: #111; color: #f5f5f5; padding: 50px 20px; line-height: 1.7; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-radius: 10px; max-width: 900px; margin: 50px auto;">
-  <h2 style="color: #aa9102; font-size: 2em; margin-bottom: 20px; text-align: center;">История парапсихологии и области исследований</h2>
+<section id="parapsychology-history" style="background-color: #111; color: #f0e6d2; padding: 50px 20px; line-height: 1.7; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-radius: 10px; max-width: 900px; margin: 50px auto;">
+  <h2 style="color: #f0e6d2; font-size: 2em; margin-bottom: 20px; text-align: center;">История парапсихологии и области исследований</h2>
   <p>
     Парапсихология — это междисциплинарная область исследований, изучающая феномены, выходящие за рамки традиционной психологии и физики, включая телепатию, ясновидение, психокинез и опыт взаимодействия с энергетическими полями. Научные попытки изучения подобных явлений начали активно развиваться в конце XIX — начале XX века.
   </p>
@@ -40,7 +40,7 @@
   <p>
     Основные направления исследований включают:
   </p>
-  <ul style="margin-left: 20px; list-style-type: disc; color: #f5f5f5;">
+  <ul style="margin-left: 20px; list-style-type: disc; color: #f0e6d2;">
     <li><strong>Экстрасенсорное восприятие (ESP)</strong> — исследование способности человека получать информацию без использования обычных органов чувств.</li>
     <li><strong>Психокинез (PK)</strong> — изучение воздействия сознания на физические объекты или процессы.</li>
     <li><strong>Исследование астральных и энергетических полей</strong> — наблюдение и систематизация субъективного опыта взаимодействия с тонкими уровнями сознания и энергетическими структурами.</li>
