--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ document.getElementById("moon-phase").textContent = getMoonPhaseAccurate();
 
  
   <p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
+  <audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+<button onclick="document.getElementById('bgMusic').play()">Включить музыку</button>
+<button onclick="document.getElementById('bgMusic').pause()">Выключить музыку</button>
+
 </footer>
   
 
