--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,12 @@
 
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
+
+    <audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+<button onclick="document.getElementById('bgMusic').play()">Включить музыку</button>
+<button onclick="document.getElementById('bgMusic').pause()">Выключить музыку</button>
   </footer>
 
   <script src="script.js"></script>
