--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <link rel="canonical" href="https://parapsycholog.uk/blog.html" />
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Блог - Парапсихология</title>
@@ -15,26 +14,51 @@
       <a href="index.html">Главная</a>
       <a href="about.html">Обо мне</a>
       <a href="services.html">Услуги</a>
-      
       <a href="contact.html">Контакты</a>
     </nav>
   </header>
 
   <main>
     <section class="blog-preview">
-      
-      <div id="blog-list"></div>
+      <div id="blog-list">
+
+        <!-- Статья 1 -->
+        <div class="blog-post">
+          <h2 class="blog-title">Сознание и энергия</h2>
+          <section class="blog-article">
+            <p>Сознание человека — это не просто результат биохимических процессов, но сложная сеть энергии и вибраций, взаимодействующая с тонкими слоями реальности. За пределами обычного восприятия скрываются невидимые силы, которые формируют наши мысли, эмоции и судьбу.</p>
+            <p>Энергетическое поле человека, традиционно изучаемое в биоэнергетике и эзотерических практиках, является мостом между физическим и нефизическим измерениями. С помощью осознанного взаимодействия с этим полем возможно обнаружить скрытые паттерны, влияющие на психику и духовное состояние.</p>
+            <p>Практики, такие как Таро, хирология и работа с Дизайном Человека, позволяют установить контакт с этими невидимыми структурами и направлять энергию сознательно. Таким образом, человек получает возможность не только понимать себя глубже, но и влиять на свою жизненную траекторию.</p>
+            <p>Постижение этой связи между сознанием, энергией и подсознательными силами требует внимательного наблюдения, медитативной практики и открытости к необъяснимому.</p>
+            <p>Парапсихология исследует скрытые возможности человеческого сознания — телепатию, ясновидение, психокинез, предчувствие и взаимодействие с энергетическими структурами мира. Это наука о тонких связях между мыслью и материей.</p>
+            <p>Изучая эти явления, человек открывает более глубокое понимание своей природы и силы духа, а также осознаёт, что границы реальности шире, чем принято считать.</p>
+          </section>
+        </div>
+
+        <!-- Статья 2 -->
+        <div class="blog-post">
+          <h2 class="blog-title">ЭНЕРГЕТИЧЕСКОЕ ТЕЛО</h2>
+          <section class="blog-article">
+            <p>Энергетическое тело человека возникает из концентрированной космической энергии в момент синтеза двух энергетических тел: яйца и зародышевой клетки. Его структура определяется в значительной степени преобладающей в этот момент космоэнергетической констеляцией (что объясняет влияние расположения планет и биоритмических пропорций на момент зачатия).</p>
+            <p>С самого начала своего возникновений тело имеет связь с содержанием космического сознания и архаичного подсознания (здесь мы имеем объяснение феномену реинкарнации, т.е. воспоминанию о прежней земной жизни). Сразу же после своего возникновения энергетическое тело начинает через подсознание передавать информацию материальному телу для его структурного построения.</p>
+            <p>Энергию для поддержания своих психических функций энергетическое тело получает от свободной космической энергии, которую оно может непосредственно воспринимать с помощью так называемых чакр (санскрит: колесо). В преобразованной форме часть этой энергии оно отдает материальному телу как "жизненную энергию".</p>
+            <p>Информацию из окружающего мира энергетическое тело принимает также через чакры в форме космоэнергетических импульсов. Эти импульсы и информация, приходящие из сознания, накапливаются в подсознании и там перерабатываются. Внутри энергетического тела информационные импульсы передаются через систему нади или меридианов (обе системы — индийские нади и китайские меридианы — идентичны друг другу).</p>
+            <p>Так как космоэнергетическая распределительная система энергетического тела посредством биоэнергетического взаимодействия связана с нервными сплетениями материального тела, то в любое время материальному телу может быть передана космическая энергия как "энергия жизни". Таким образом возможно прямое воздействие на материальный организм через космоэнергетические импульсы.</p>
+            <p>Энергетическое тело бессмертно. Оно было до рождения и после смерти человека отделяется от его материального тела, чтобы существовать дальше как составная часть космического сознания (поэтому возможны контакты с умершими, например, посредством "пишущего стола").</p>
+          </section>
+        </div>
+
+      </div>
     </section>
   </main>
 
   <footer>
     <p>© 2025 Parapsycholog. All rights reserved.</p>
-
     <audio id="bgMusic" loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-<button onclick="document.getElementById('bgMusic').play()">Включить музыку</button>
-<button onclick="document.getElementById('bgMusic').pause()">Выключить музыку</button>
+      <source src="music.mp3" type="audio/mpeg">
+    </audio>
+    <button onclick="document.getElementById('bgMusic').play()">Включить музыку</button>
+    <button onclick="document.getElementById('bgMusic').pause()">Выключить музыку</button>
   </footer>
 
   <script src="script.js"></script>
