--- a/schedule.html
+++ b/schedule.html
@@ -1,1 +1,71 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <link rel="canonical" href="https://parapsycholog.uk/schedule.html" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Расписание занятий - Парапсихология</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Расписание занятий</h1>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="about.html">Обо мне</a>
+      <a href="services.html">Услуги</a>
+      <a href="blog.html">Блог</a>
+      <a href="contact.html">Контакты</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="schedule">
+      <h2>Ближайшие занятия и курсы</h2>
+      <p>* Время по Гринвичу (GMT+2)</p>
+
+      <div class="schedule-table">
+        <div class="schedule-row header">
+          <div>Дата</div>
+          <div>Время</div>
+          <div>Тема занятия</div>
+          <div>Формат</div>
+        </div>
+
+        <div class="schedule-row">
+          <div>1 марта - декабрь 2025</div>
+          <div>08:30 - 10:00</div>
+          <div>Психоалхимия</div>
+          <div>Онлайн </div>
+        </div>
+
+        <div class="schedule-row">
+          <div>1 апреля - декабрь 2025</div>
+          <div>19:00 – 21:00</div>
+          <div> Таро Тота</div>
+          <div>Онлайн </div>
+        </div>
+
+        <div class="schedule-row">
+          <div> с 6 января 2026</div>
+          <div>18:00 – 20:00</div>
+          <div>Парапсихология</div>
+          <div>Онлайн</div>
+        </div>
+
+      </div>
+
+      <p class="note">
+        * Чтобы записаться на занятие, напишите через раздел <a href="contact.html">Контакты</a> или на e-mail: jevgenij.timoscenko@gmail.com
+      </p>
+    </section>
+  </main>
+
+  <footer>
+     <p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
+
+    
+  </footer>
+</body>
+</html>
