--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="services.html">Услуги</a>
       <a href="blog.html">Блог</a>
       <a href="contact.html">Контакты</a>
+      <a href="schedule.html">Расписание</a>
     </nav>
   </header>
 
