--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,7 @@
       <a href="about.html">Обо мне</a>
       <a href="services.html">Услуги</a>
       <a href="contact.html">Контакты</a>
+      <a href="schedule.html">Расписание</a>
     </nav>
   </header>
 
