--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
       <a href="about.html">Обо мне</a>
       <a href="services.html">Услуги</a>
       <a href="blog.html">Блог</a>
+      <a href="schedule.html">Расписание</a>
       
     </nav>
   </header>
@@ -54,4 +55,5 @@
   </footer>
 </body>
 </html>
+
 
