--- a/services.html
+++ b/services.html
@@ -19,9 +19,9 @@
     <nav>
       <a href="index.html">Главная</a>
       <a href="about.html">Обо мне</a>
-      
       <a href="blog.html">Блог</a>
       <a href="contact.html">Контакты</a>
+      <a href="schedule.html">Расписание</a>
     </nav>
   </header>
 
@@ -132,6 +132,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
