--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
       <a href="services.html">Услуги</a>
       <a href="blog.html">Блог</a>
       <a href="contact.html">Контакты</a>
+      <a href="schedule.html">Расписание</a>
     </nav>
   </header>
 
@@ -149,6 +150,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
