--- a/schedule.html
+++ b/schedule.html
@@ -42,14 +42,14 @@
 
         <div class="schedule-row">
           <div>1 апреля - декабрь 2025</div>
-          <div>19:00 – 21:00</div>
+          <div>08:30 - 10:00</div>
           <div> Таро Тота</div>
           <div>Онлайн </div>
         </div>
 
         <div class="schedule-row">
           <div> с 6 января 2026</div>
-          <div>18:00 – 20:00</div>
+          <div>08:30 – 10:00</div>
           <div>Парапсихология</div>
           <div>Онлайн</div>
         </div>
