--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,11 @@
   </main>
 
   <footer>
-    <p>© 2025 Parapsycholog. All rights reserved.</p>
+    
+<p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
   </footer>
 </body>
 </html>
+
 
 
