--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,8 @@
   </main>
 
   <footer>
-    <p>© 2025 Parapsycholog. All rights reserved.</p>
+    
+     <p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
     <audio id="bgMusic" loop>
       <source src="music.mp3" type="audio/mpeg">
     </audio>
