--- a/about.html
+++ b/about.html
@@ -146,10 +146,12 @@
   </main>
 
   <footer>
-    <p>© 2025 Parapsycholog. All rights reserved.</p>
+    
+     <p>© 2025 Parapsycholog. All rights reserved. <span class="psi-symbol">Ψ</span></p>
   </footer>
 </body>
 </html>
+
 
 
 
