--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
         <div class="service-card">
           <h3>Первичная консультация</h3>
           <p>Диагностика, анализ ситуации и проработка вопросов.</p>
-          <p class="price">£100 / 1 час</p>
+          <p class="price">£100 / 45 минут</p>
         </div>
 
         <div class="service-card">
@@ -53,13 +53,13 @@
         <div class="service-card">
           <h3>Таро, Хирология, Формула Души</h3>
           <p> Просмотр ситуаций и жизненных тенденций, диагностика судьбы и личного потенциала. Помогает осознать причины происходящего и увидеть путь развития.</p></p>
-          <p class="price">£100 / 1 час </p>
+          <p class="price">£100 / 45 минут </p>
         </div>
 
         <div class="service-card">
           <h3>Чтение Бодиграфа (Дизайн Человека)</h3>
           <p>Базовый анализ вашей карты.</p>
-          <p class="price">£120 / 1,5 час</p>
+          <p class="price">£120 / 1 час</p>
         </div>
 
         <div class="service-card">
@@ -133,6 +133,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
