--- a/schedule.html
+++ b/schedule.html
@@ -23,7 +23,7 @@
   <main>
     <section class="schedule">
       <h2>Ближайшие занятия и курсы</h2>
-      <p>* Время по Гринвичу (GMT+2)</p>
+      <p>* Время по Гринвичу </p>
 
       <div class="schedule-table">
         <div class="schedule-row header">
