--- a/blog.html
+++ b/blog.html
@@ -77,6 +77,21 @@
             <p>Энергетическое тело бессмертно. Оно было до рождения и после смерти человека отделяется от его материального тела, чтобы существовать дальше как составная часть космического сознания (поэтому возможны контакты с умершими, например, посредством "пишущего стола").</p>
           </section>
         </div>
+        <!-- Статья 3 -->
+<div class="blog-post">
+  <h2 class="blog-title">ПОЛЕ ПСИ</h2>
+  <section class="blog-article">
+    <p>В большинстве культур древности мистики сообщали своим народам об ореоле (от греч. "аура" — воздух, дуновение), который якобы окружает каждое человеческое тело. Без сомнения, именно эти описания привели в итоге к появлению образных изображений ореола на рисунках, статуях и монетах.</p>
+    <p>Египтяне, индусы, персы, греки и римляне рассматривали ореол исключительно только как характеристику своих богов. Это понимание затем было перенято, как и многие другие языческие представления, христианством, поэтому уже в живописных работах раннего христианства можно увидеть изображения ореола. В противоположность представлениям прежних культур, в которых ореол окружает всю фигуру, здесь он выступает только в форме сияния вокруг головы и является атрибутом пророков, апостолов, святых и ангелов.</p>
+    <p>Каббала, тайное учение евреев, которая включает в себя все неиудейские священные книги и устные предания, знакома с аурой как составной частью так называемого астрального тела, представляемой как тонкая материя, которая пронизывает все материальные субстанции человеческого организма и воспринимается иногда визуально.</p>
+    <p>Ту же ауру, которая описана в каббале, установил Фрайхерр фон Райхенбах с помощью своих медиумов как у органических, так и у неорганических тел. В процессе этих исследований многие сверхчувственные люди сообщали, что аура человека подвержена постоянному изменению в зависимости от характера, настроения и строения тела по форме, цвету и интенсивности. Хотя многие ученые отклоняли выводы Райхенбаха, имелось некоторое количество серьезных представителей схоластической науки, которые проводили дальнейшее изучение ауры.</p>
+    <p>Особенно известны в этой связи стали исследования ауры лондонским врачом д-ром Уолтером Килнером (1847—1920), который открыл в начале нашего столетия, что аура становится видимой при наблюдении через стеклянную пластинку, окрашенную дицианидом. Килнер описывал ауру как облако излучения, которое распространялось до 20 см от периферии тела и проявляло четкий цветовой спектр. Позже он обнаружил, что болезни, усталость, смена настроения, магнетизм, гипноз или электрическое воздействие могут изменять величину этого пульсирующего облака и влияют на интенсивность цветового излучения. Он разработал и описал многие методы диагноза на основе видимой ауры (используя так называемый "экран Килнера") и постоянно указывал на связь между симптомами болезней и видимой вокруг их тонковещественной оболочки.</p>
+    <p>Другими исследователями ауры были проф. д-р Рорбахер и проф. д-р Рогельсбергер. Огромный интерес вызвали исследования проф. д-ра Фердинанда Зауербруха (1875—1951). Зауербрух пользовался всемирной известностью как врач и хирург. Он смог даже доказать существование электрического поля в ауре.</p>
+    <p>Исследования Зауербруха были продолжены в середине семидесятых годов японским ученым д-ром Хидео Ушида и принесли результаты, которые вызвали сенсацию в кругах специалистов. Ушида разработал для своих исследований измерительный прибор, который позволил ему точно измерить ауру и таким образом доказать ее существование.</p>
+    <p>Как и другие исследователи ауры до него, Ушида смог установить, что в форме ауры находят свое выражение недосыпание, прием пищевых ядов, физические или духовные недуги. Например, если испытуемый страдал от депрессии, часть ауры вокруг головы заметно вибрировала, в то время как потребление продуктов питания четко изменяло другую небольшую часть ауры, расположенную в центре тела.</p>
+  </section>
+</div>
+
 
       </div>
     </section>
