--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZY7NYD5E7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-VZY7NYD5E7');
+  </script>
+  
   <title>Парапсихолог, таролог и эзотерик в Великобритании</title>
 <meta name="description" content="Консультации по Таро, Хирологии и Парапсихологии. Помогаю разобраться в жизненных ситуациях, раскрыть потенциал и найти ответы. Онлайн и очно в Великобритании.">
 <meta name="keywords" content="парапсихолог, таролог, эзотерик, таро онлайн, хиромантия, парапсихология UK, эзотерическая помощь">
